# giagui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: resources.qrc
source/: Containers.hpp  Dataset.cpp  Dataset.hpp  DatasetControlWidget.cpp  DatasetControlWidget.hpp  DatasetListWidget.cpp  DatasetListWidget.hpp  DoubleValidator.cpp  DoubleValidator.hpp  GeoValue.hpp  GeoValueValidator.cpp  GeoValueValidator.hpp  IntSpinBox.cpp  IntSpinBox.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MapUtils.hpp  MapView.cpp  MapView.hpp  MapWindow.cpp  MapWindow.hpp  SimulationConfig.cpp  SimulationConfig.hpp  main.cpp  mainwindow.ui  map.cpp  map.hpp
source/dialogs/: DatasetCreateDialog.cpp  DatasetCreateDialog.hpp  SimulationConfigDialog.cpp  SimulationConfigDialog.hpp
source/models/: DatasetListModel.cpp  DatasetListModel.hpp  GeoHistoryModel.cpp  GeoHistoryModel.hpp
source/preprocess/: H3Map.cpp  H3Map.hpp  Project.cpp  Project.hpp
